# nodebrowser

./: README.md  implementation-status.json  pyproject.toml  zoo-project.json
docs/raw/: 001__initial-spec.json  002__spec-rework-for-judge-pattern.json
src/nodebrowser/: __init__.py  __main__.py  cli.py  nodebrowser.py  ui.py
tests/: conftest.py  test_initial_slice.py
